Removed module dependency to ant and relaxngDatatype, those can now be placed on classpath instead.
Signed-off-by: Roman Grigoriadi <roman.grigoriadi@oracle.com>