@@ -256,8 +256,6 @@
                             <forkCount>1</forkCount>
                             <reuseForks>true</reuseForks>
                             <argLine>
-                                --add-reads java.base=java.desktop
-                                --add-modules java.xml.bind
                                 --upgrade-module-path ${endorsed.dir}
                                 -Djdk.attach.allowAttachSelf
                            </argLine>
