@@ -275,6 +275,10 @@
                                     <includes>
                                         <include>module-info.java</include>
                                     </includes>
+                                    <compilerArgs>
+                                        <arg>--add-reads</arg>
+                                        <arg>com.sun.tools.xjc=antX</arg>
+                                    </compilerArgs>
                                 </configuration>
                             </execution>
                             <execution>
